--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@
     margin: 0px;
     padding: 0px;
 }
+body{
+    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Crimson Text', serif;
+    font-family: 'Poppins', sans-serif;
+}
 .navbar ul{
     list-style: none;
     font-size: 25px;
@@ -172,3 +177,21 @@ table, tr {
 p a{
     color: #0802A3;
 }
+#myBtn{
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #2B2A4C;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+#myBtn:hover {
+    background-color: #555;
+  }
